--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -86,7 +86,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #3d6d51;
   }
   a:hover {
     color: #747bff;
