--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -63,8 +63,91 @@ h1 {
 .read-the-docs {
   color: #888;
 }
+ */
+html,
+body,
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: rgb(240, 247, 241);
+}
 
-button {
+
+.container {
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
+
+.title{
+    text-align: center;
+    font-size: 4.2rem;
+    font-family: 'Manrope', sans-serif;
+}
+.parentcard {
+    width: 23%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 1.5rem;
+    padding: 3px;
+    background-color: rgb(163, 211, 149);
+    box-shadow: 10px 10px 5px rgb(116, 116, 80);
+ 
+}
+@media screen and (max-width: 1180px){
+    .parentcard{
+        width: 44%;
+    }
+}
+@media screen and (max-width: 844px){
+    .parentcard{
+        width: 100%;
+    }
+}
+
+.image {
+    width: 70%;
+    height: 70%;
+    filter: grayscale(85%);
+    transition: all .5s;
+    object-fit: contain;
+}
+.title {
+    font-size: 2.0rem;
+    background-color: rgb(163, 211, 149); 
+    transition: all .5s;
+    font-family: 'Manrope', sans-serif;
+
+}
+.card-price{
+    background-color: rgb(163, 211, 149); 
+    font-size: 1.7rem;
+    margin-bottom: 30px rgb(163, 211, 149);
+    text-align: center;
+    transition: all .5s;
+    font-family: 'Manrope', sans-serif;
+}
+.image:hover {
+    filter: grayscale(0);
+    transform: scale(1.4);
+}
+
+.card-price:hover {
+    transform: scale(0.7);
+    filter:opacity(40%);
+}
+
+.title:hover {
+    transform: scale(0.9);
+    filter:opacity(40%);
+}
+
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -95,3 +178,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+ */
