--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -1,6 +1,6 @@
 :root{
     --darkgreen: #30583a;
-    --mintgreen: #9cbd94;
+    --mintgreen: #47b682;
     --primary: var(--mintgreen);
 }
 body{
@@ -24,7 +24,6 @@ body,
 .title{
     text-align: center;
     font-size: 4.2rem;
-    margin: 22px;
     font-family: 'Manrope', sans-serif;
 }
 #uwu{
@@ -37,7 +36,7 @@ body,
     text-align: center;
     font-size: 1.8rem;
     font-family: 'Manrope', sans-serif;
-    background-color: rgb(59, 107, 91);
+    background-color: #5c974f;
 }
 
 .dogs{
@@ -45,7 +44,7 @@ body,
     text-align: center;
     font-size: 1.8rem;
     font-family: 'Manrope', sans-serif;
-    background-color: rgb(59, 107, 91);
+    background-color: #5c974f;
 }
 
 .cats{
@@ -53,7 +52,7 @@ body,
     text-align: center;
     font-size: 1.8rem;
     font-family: 'Manrope', sans-serif;
-    background-color: rgb(59, 107, 91);
+    background-color: #5c974f;
 }
 
 .birds{
@@ -61,7 +60,7 @@ body,
     text-align: center;
     font-size: 1.8rem;
     font-family: 'Manrope', sans-serif;
-    background-color: rgb(59, 107, 91);
+    background-color: #5c974f;
 }
 
 .parentcard {
