--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -62,6 +62,13 @@ body,
     background-color: #5c974f;
 }
 
+.afghanhound{
+    flex-direction: row;
+    text-align: center;
+    font-size: 1.8rem;
+    font-family: 'Manrope', sans-serif;
+    background-color: #5c974f;
+}
 .cats{
     flex-direction: row;
     text-align: center;
