--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -6,7 +6,7 @@
 body{
     background-color: var(--primary);
 }
-#themes{
+.themes{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
