--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -46,7 +46,7 @@ body,
   flex-wrap: wrap;
   justify-content: space-around;
 }
-.allpets{
+.everything{
     flex-direction: row;
     text-align: center;
     font-size: 1.8rem;
