--- a/vite-project/css/styles.css
+++ b/vite-project/css/styles.css
@@ -90,19 +90,6 @@ body,
     background-color: #5c974f;
 }
 
-.card {
-  height: 45vh;
-  width: 23%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  margin-bottom: 1.5rem;
-  padding: 3px;
-  background-color: #a3d395;
-  box-shadow: 10px 10px 5px #747450;
- 
-}
 @media screen and (max-width: 1180px){
     .card{
         width: 44%;
@@ -122,15 +109,30 @@ body,
   background-color: var(--primary);
 }
 
-.card-imag{
-  max-width: 100%;
-  max-height: 60%;
+.card {
+    height: 45vh;
+    width: 23%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 1.5rem;
+    padding: 3px;
+    background-color: #a3d395;
+    box-shadow: 10px 10px 5px #747450;
 }
+
 .card-title {
     font-size: 2.0rem;
+    text-align: center;
     transition: all .5s;
     font-family: 'Manrope', sans-serif;
 }
+.card-img{
+    max-height: 60%;
+    max-width: 100%;
+  }
+
 .card-price{
     background-color: #a3d395; 
     font-size: 1.7rem;
